# plotting-rs

./: Cargo.toml  README.md  index.html
.github/workflows/: deploy-page.yml
assets/: sw.js
docs/: index.html  plotting-rs-401c068e8956fffc.js  plotting-rs-401c068e8956fffc_bg.wasm  plotting-rs-d823b8a97b7dee10.js
docs/plotting-rs/: plotting-rs-d823b8a97b7dee10_bg.wasm
examples/: main_web.rs  meval_example.rs  plotting_v2.rs  web.rs
src/: lib.rs  main.rs  plotting.rs
