[package]
name = "plotting-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plotting_rs"
path = "src/lib.rs"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_plot = "0.27.2"
egui_web = "0.17.0"
log = "0.4.21"
meval = "0.2.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
